@@ -1,3 +1,12 @@
+1998-06-11  Mario Weilguni   <mweilguni@kde.org> (KMail-0.6.9)
+	
+	* "P" and "N" (next and previous mail) will cause the header
+	list to be scrolled if the new item is not visible
+
+	* fixed some code to prevent compiler warning
+
+	* panner position is now (again) restored
+	
 1998-06-07  Stefan Taferner  <taferner@kde.org> (KMail-0.6.8)
 
 	* Message/Headers: Email addresses like <joe@home.org>
